tests/algorithms/x/Java/maths/radix2_fft.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden644_radix2_fft2569314485/001/Main.java:146: error: incompatible types: double[] cannot be converted to Object[]
            s = s + _p(_geto(l, i_6));
                             ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
